--- a/index.html
+++ b/index.html
@@ -107,19 +107,32 @@
     </header>
     <main>
         <!-- categories -->
-        <section class="container">
-            <div class="row g-2">
-                <div class="col-lg-4">
-                    <div class="p-3 border bg-light">Custom column padding</div>
+        <section class="container my-5">
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6">
+                    <div
+                        class="p-3 border bg-success text-light  d-flex align-items-center d-flex justify-content-between rounded-3">
+                        <h1>Watch</h1>
+                        <img class="" src="images/categories/watch.png" alt="">
+                    </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="p-3 border bg-light">Custom column padding</div>
+                <div class="col-lg-4 col-md-6">
+                    <div
+                        class="p-3 border bg-warning text-light  d-flex align-items-center d-flex justify-content-between rounded-3">
+                        <h1>Shoes</h1>
+                        <img class="" src="images/categories/shoes.png" alt="">
+                    </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="p-3 border bg-light">Custom column padding</div>
+                <div class="col-lg-4 col-md-6">
+                    <div
+                        class="p-3 border bg-danger text-light  d-flex align-items-center d-flex justify-content-between rounded-3">
+                        <h1>Bag</h1>
+                        <img class="" src="images/categories/bag.png" alt="">
+                    </div>
                 </div>
+
             </div>
-        </section>>
+        </section>
     </main>
     <footer>
 
