--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
+    <!-- Favicon -->
+    <link rel="icon" href="images/banner-images/headphone.png">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/9142b0604c.js" crossorigin="anonymous"></script>
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -45,7 +49,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row d-flex align-items-center bg-info p-3">
-                            <div class="col lg-7">
+                            <div class="col lg-7 md">
                                 <h1>Cool Dude Headphone
                                 </h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -54,14 +58,14 @@
                                 <h1>$420</h1>
                                 <button type="button" class="btn btn-warning">Buy Now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-5">
                                 <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row d-flex align-items-center bg-info p-3">
-                            <div class="col lg-7">
+                            <div class="col lg-7 col-md-7">
                                 <h1>Cool Dude Headphone
                                 </h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -70,14 +74,14 @@
                                 <h1>$420</h1>
                                 <button type="button" class="btn btn-warning">Buy Now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-5">
                                 <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="row d-flex align-items-center bg-info p-3">
-                            <div class="col lg-7">
+                            <div class="col lg-7 col-md-7">
                                 <h1>Cool Dude Headphone
                                 </h1>
                                 <p>This is the best headphone in the world for people who just want to waste time in
@@ -86,7 +90,7 @@
                                 <h1>$420</h1>
                                 <button type="button" class="btn btn-warning">Buy Now</button>
                             </div>
-                            <div class="col-lg-5">
+                            <div class="col-lg-5 col-md-5">
                                 <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
@@ -133,12 +137,105 @@
 
             </div>
         </section>
+        <section class="container">
+            <h1>Shoes</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3  g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <button type="button" class="btn btn-warning mx-5 my-3">Buy Now</button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360
+                            </h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <button type="button" class="btn btn-warning mx-5 my-3">Buy Now</button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <button type="button" class="btn btn-warning mx-5 my-3">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container mb-4">
+            <h1>Backpack</h1>
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3  g-4">
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <button type="button" class="btn btn-warning mx-5 my-3">Buy Now</button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag
+                            </h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                        </div>
+                        <button type="button" class="btn btn-warning mx-5 my-3">Buy Now</button>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card border-0 shadow-lg h-100">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax
+                            </h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
+                        </div>
+                        <button type="button" class="btn btn-warning mx-5 my-3">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class=" d-flex justify-content-center m-2 p-5 bg-info rounded-3">
+                <div>
+                    <h1>LET'S STAY IN TOUCH</h1>
+                    <p>Get updates on sales, specials and more</p>
+                    <input type="email" placeholder="your email">
+                    <br>
+                    <button type="button" class="btn btn-warning mt-2">Buy Now</button>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="mt-5 text-center">
+        <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
     </footer>
-
-
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
