--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
+    <!-- custom styles -->
+    <link rel="stylesheet" href="style.css">
     <!-- Favicon -->
     <link rel="icon" href="images/banner-images/headphone.png">
-    <!-- fontawesome -->
-    <script src="https://kit.fontawesome.com/9142b0604c.js" crossorigin="anonymous"></script>
     <!-- bootstrap stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -48,7 +48,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <div class="row d-flex align-items-center bg-info p-3">
+                        <div class="row d-flex align-items-center panda-bg-info p-3">
                             <div class="col lg-7 md">
                                 <h1>Cool Dude Headphone
                                 </h1>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row d-flex align-items-center bg-info p-3">
+                        <div class="row d-flex align-items-center panda-bg-info p-3">
                             <div class="col lg-7 col-md-7">
                                 <h1>Cool Dude Headphone
                                 </h1>
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="row d-flex align-items-center bg-info p-3">
+                        <div class="row d-flex align-items-center panda-bg-info p-3">
                             <div class="col lg-7 col-md-7">
                                 <h1>Cool Dude Headphone
                                 </h1>
@@ -111,7 +111,7 @@
     </header>
     <main>
         <!-- categories -->
-        <section class="container my-5">
+        <section class="container categories my-5">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <div
@@ -222,7 +222,7 @@
             </div>
         </section>
         <section class="container">
-            <div class=" d-flex justify-content-center m-2 p-5 bg-info rounded-3">
+            <div class=" d-flex justify-content-center m-2 p-5 panda-bg-info rounded-3">
                 <div>
                     <h1>LET'S STAY IN TOUCH</h1>
                     <p>Get updates on sales, specials and more</p>
@@ -234,7 +234,7 @@
         </section>
     </main>
     <footer class="mt-5 text-center">
-        <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+        <small>©2022. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
     </footer>
     <!-- bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
